# scikit-pr-open

./: CMakeLists.txt  LICENSE  README.md  build.py  scikit-pr.sublime-workspace  setup.py
skpr/: __init__.py
skpr/_ext/skpr_thnn/: __init__.py
skpr/core/: __init__.py  parameters.py
skpr/core/engines/: BaseEngine.py  CodedMeasurementEngine.py  __init__.py
skpr/core/models/: CodedMeasurementNet.py  FarfieldCodedMeasurementNet.py  SimFarfieldCodedMeasurementNet.py  __init__.py
skpr/examples/: WDD_test.py  coded_diffraction.py  coded_diffraction_sim.py
skpr/inout/: __init__.py  data_preprocessing.py  frc.py  h5rw.py  plot.py
skpr/nn/: __init__.py  functional.py
skpr/nn/_functions/: AmplitudeLoss.py  BM3DPrior.py  Broadcast.py  CMul.py  CMulNoSubpixel.py  CenteringPrior.py  CropAtPositions.py  FFT.py  FFTShift.py  FarFieldPoissonLikelihood.py  FarfieldAmplitude.py  FarfieldAmplitudeNoSubpixel.py  FarfieldIntensity.py  FarfieldIntensityNoSubpixel.py  IFFT.py  PoissonLikelihood.py  PoissonNoise.py  SingleFarFieldPoissonLikelihood.py  SinglePoissonLikelihood.py  SubpixelShift.py  SubpixelShiftNoShiftGrad.py  TruncatedFarFieldPoissonLikelihood.py  TruncatedPoissonLikelihood.py  __init__.py
skpr/nn/modules/: AmplitudeLoss.py  BM3DPrior.py  CMul.py  CenteringPrior.py  FarFieldPoissonLikelihood.py  FarfieldAmplitude.py  FarfieldIntensity.py  PoissonLikelihood.py  SingleFarFieldPoissonLikelihood.py  SinglePoissonLikelihood.py  SubpixelShift.py  TruncatedFarFieldPoissonLikelihood.py  TruncatedPoissonLikelihood.py  __init__.py  mPIEPrior.py
skpr/optim/: GradientDescent.py  HistorySGD.py  __init__.py  cg.py  lbfgs.py
skpr/simulation/: mtfdqe.py  probe.py  random_probe.py  simulator.lua
skpr/util/: __init__.py  data_preparation.py  pattern.py  physics.py
tests/: create_binmask.py  data_preprocessing.py  determine_probe_size.py  log.txt  ptycho_linalg.py  ptycho_linalg2.py  test.py  test_BM3DPrior.py  test_advanced_raster_scan.py  test_complex2pair.py  test_denoise.py  test_ortho.py  test_subpixelshift.py  test_variable_indexing.py
